--- a/module/config/i18n/en-US.json
+++ b/module/config/i18n/en-US.json
@@ -2546,10 +2546,10 @@
       "help": "前排舰队最低战力，低于此战力将不会进行出击"
     },
     "DisabledTask": {
-      "name": "禁用倍率的项目",
-      "help": "会关闭倍率的项目，建议敏感项目全关。打开的项目导致封号后果自负。\n敏感项目：共斗，极地风暴，Meta与演习",
-      "disable_guild_and_dangerous": "禁用大舰队以及敏感项目",
-      "disable_all_dangerous_task": "禁用敏感项目",
+      "name": "禁用倍率的任务",
+      "help": "需要关闭倍率的任务，建议敏感任务全关，如导致封号后果自负\n敏感任务：共斗，极地风暴，Meta与演习",
+      "disable_guild_and_dangerous": "禁用大舰队以及敏感任务",
+      "disable_all_dangerous_task": "禁用敏感任务",
       "disable_meta_and_exercise": "禁用Meta和演习",
       "disable_exercise": "禁用演习",
       "enable_all": "百无禁忌"
